# process_bridge

./: README.md  example.py  test.py
c_process_bridge/: CMakeLists.txt
c_process_bridge/example/: CMakeLists.txt  child.c
c_process_bridge/src/: process_bridge.c  process_bridge.h
c_process_bridge/test/: CMakeLists.txt  child.c
node_process_bridge/: ProcessBridge.js  package.json
node_process_bridge/example/: child.js  parent.js
node_process_bridge/test/: child.js  test_01.js  test_02.js
